# rapidfuzz-kor-cpp

./: .gitignore
examples/hangul_matching/: CMakeLists.txt  hangulPreprocessor.cpp  hangulPreprocessor.hpp  main.cpp  utils.hpp
rapidfuzz/utils-hangul/: CMakeLists.txt
rapidfuzz/utils-hangul/_internal/: constants.hpp  hangul.cpp  hangul.hpp  hangul.test.cpp  utils.cpp  utils.hpp  utils.test.cpp  utils_impl.hpp
rapidfuzz/utils-hangul/assemble/: assemble.cpp  assemble.hpp  assemble.test.cpp
rapidfuzz/utils-hangul/canBe/: canBe.cpp  canBe.hpp  canBe.test.cpp
rapidfuzz/utils-hangul/combineCharacter/: combineCharacter.cpp  combineCharacter.hpp
rapidfuzz/utils-hangul/convertQwertyToAlphabet/: constants.hpp  convertQwertyToAlphabet.cpp  convertQwertyToAlphabet.hpp  convertQwertyToAlphabet.test.cpp
rapidfuzz/utils-hangul/days/: days.cpp  days.hpp  days.test.cpp
rapidfuzz/utils-hangul/disassemble/: disassemble.cpp  disassemble.hpp  disassemble.test.cpp
rapidfuzz/utils-hangul/disassembleCompleteCharacter/: disassembleCompleteCharacter.cpp  disassembleCompleteCharacter.hpp  disassembleCompleteCharacter.test.cpp
rapidfuzz/utils-hangul/getChoseong/: constants.hpp  getChoseong.cpp  getChoseong.hpp  getChoseong.test.cpp
rapidfuzz/utils-hangul/hasBatchim/: hasBatchim.cpp  hasBatchim.hpp  hasBatchim.test.cpp
rapidfuzz/utils-hangul/josa/: josa.cpp  josa.hpp  josa.test.cpp
rapidfuzz/utils-hangul/numberToHangul/: numberToHangul.cpp  numberToHangul.hpp  numberToHangul.test.cpp
rapidfuzz/utils-hangul/numberToHangulMixed/: numberToHangulMixed.cpp  (+2 more)
(+43 files in other folders)
